# api/src/app/models/Guest.ts
@@ -2,6 +2,7 @@ import { Decorators, SoftDelete } from '@rvoh/dream'
 import { DreamColumn, DreamSerializers } from '@rvoh/dream/types'
 import ApplicationModel from '@models/ApplicationModel.js'
 import Booking from '@models/Booking.js'
+import Review from '@models/Review.js'
 import User from '@models/User.js'
 
 const deco = new Decorators<typeof Guest>()
@@ -30,4 +31,7 @@ export default class Guest extends ApplicationModel {
 
   @deco.HasMany('Booking', { dependent: 'destroy' })
   public bookings: Booking[]
+
+  @deco.HasMany('Review', { dependent: 'destroy' })
+  public reviews: Review[]
 }
