# api/src/types/db.ts
@@ -258,6 +258,18 @@ export interface Places {
   updatedAt: Timestamp
 }
 
+export interface Reviews {
+  body: string
+  bookingId: string
+  createdAt: Timestamp
+  deletedAt: Timestamp | null
+  guestId: string
+  id: Generated<string>
+  placeId: string
+  rating: number
+  updatedAt: Timestamp
+}
+
 export interface Rooms {
   appliances: Generated<ArrayType<ApplianceTypesEnum>>
   bathOrShowerStyle: BathOrShowerStylesEnum | null
@@ -293,6 +305,7 @@ export interface DB {
   hosts: Hosts
   localized_texts: LocalizedTexts
   places: Places
+  reviews: Reviews
   rooms: Rooms
   users: Users
 }
@@ -307,6 +320,7 @@ export class DBClass {
   hosts: Hosts
   localized_texts: LocalizedTexts
   places: Places
+  reviews: Reviews
   rooms: Rooms
   users: Users
 }
