# api/src/types/dream.ts
@@ -519,6 +519,15 @@ export const schema = {
         requiredAndClauses: null,
         passthroughAndClauses: null,
       },
+      reviews: {
+        type: 'HasMany',
+        foreignKey: 'bookingId',
+        foreignKeyTypeColumn: null,
+        tables: ['reviews'],
+        optional: null,
+        requiredAndClauses: null,
+        passthroughAndClauses: null,
+      },
     },
   },
   guests: {
@@ -582,6 +591,15 @@ export const schema = {
         foreignKey: 'guestId',
         foreignKeyTypeColumn: null,
         tables: ['bookings'],
+        optional: null,
+        requiredAndClauses: null,
+        passthroughAndClauses: null,
+      },
+      reviews: {
+        type: 'HasMany',
+        foreignKey: 'guestId',
+        foreignKeyTypeColumn: null,
+        tables: ['reviews'],
         optional: null,
         requiredAndClauses: null,
         passthroughAndClauses: null,
@@ -1032,12 +1050,152 @@ export const schema = {
         requiredAndClauses: null,
         passthroughAndClauses: null,
       },
+      reviews: {
+        type: 'HasMany',
+        foreignKey: 'placeId',
+        foreignKeyTypeColumn: null,
+        tables: ['reviews'],
+        optional: null,
+        requiredAndClauses: null,
+        passthroughAndClauses: null,
+      },
       rooms: {
         type: 'HasMany',
         foreignKey: 'placeId',
         foreignKeyTypeColumn: null,
         tables: ['rooms'],
         optional: null,
+        requiredAndClauses: null,
+        passthroughAndClauses: null,
+      },
+    },
+  },
+  reviews: {
+    serializerKeys: ['default', 'summary'],
+    scopes: {
+      default: ['dream:SoftDelete'],
+      named: [],
+    },
+    nonJsonColumnNames: [
+      'body',
+      'bookingId',
+      'createdAt',
+      'deletedAt',
+      'guestId',
+      'id',
+      'placeId',
+      'rating',
+      'updatedAt',
+    ],
+    columns: {
+      body: {
+        coercedType: {} as string,
+        enumType: null,
+        enumArrayType: null,
+        enumValues: null,
+        dbType: 'text',
+        allowNull: false,
+        isArray: false,
+      },
+      bookingId: {
+        coercedType: {} as string,
+        enumType: null,
+        enumArrayType: null,
+        enumValues: null,
+        dbType: 'uuid',
+        allowNull: false,
+        isArray: false,
+      },
+      createdAt: {
+        coercedType: {} as DateTime,
+        enumType: null,
+        enumArrayType: null,
+        enumValues: null,
+        dbType: 'timestamp without time zone',
+        allowNull: false,
+        isArray: false,
+      },
+      deletedAt: {
+        coercedType: {} as DateTime | null,
+        enumType: null,
+        enumArrayType: null,
+        enumValues: null,
+        dbType: 'timestamp without time zone',
+        allowNull: true,
+        isArray: false,
+      },
+      guestId: {
+        coercedType: {} as string,
+        enumType: null,
+        enumArrayType: null,
+        enumValues: null,
+        dbType: 'uuid',
+        allowNull: false,
+        isArray: false,
+      },
+      id: {
+        coercedType: {} as string,
+        enumType: null,
+        enumArrayType: null,
+        enumValues: null,
+        dbType: 'uuid',
+        allowNull: false,
+        isArray: false,
+      },
+      placeId: {
+        coercedType: {} as string,
+        enumType: null,
+        enumArrayType: null,
+        enumValues: null,
+        dbType: 'uuid',
+        allowNull: false,
+        isArray: false,
+      },
+      rating: {
+        coercedType: {} as number,
+        enumType: null,
+        enumArrayType: null,
+        enumValues: null,
+        dbType: 'integer',
+        allowNull: false,
+        isArray: false,
+      },
+      updatedAt: {
+        coercedType: {} as DateTime,
+        enumType: null,
+        enumArrayType: null,
+        enumValues: null,
+        dbType: 'timestamp without time zone',
+        allowNull: false,
+        isArray: false,
+      },
+    },
+    virtualColumns: [],
+    associations: {
+      booking: {
+        type: 'BelongsTo',
+        foreignKey: 'bookingId',
+        foreignKeyTypeColumn: null,
+        tables: ['bookings'],
+        optional: false,
+        requiredAndClauses: null,
+        passthroughAndClauses: null,
+      },
+      guest: {
+        type: 'BelongsTo',
+        foreignKey: 'guestId',
+        foreignKeyTypeColumn: null,
+        tables: ['guests'],
+        optional: false,
+        requiredAndClauses: null,
+        passthroughAndClauses: null,
+      },
+      place: {
+        type: 'BelongsTo',
+        foreignKey: 'placeId',
+        foreignKeyTypeColumn: null,
+        tables: ['places'],
+        optional: false,
         requiredAndClauses: null,
         passthroughAndClauses: null,
       },
@@ -1322,6 +1480,7 @@ export const connectionTypeConfig = {
       HostPlace: 'host_places',
       LocalizedText: 'localized_texts',
       Place: 'places',
+      Review: 'reviews',
       Room: 'rooms',
       'Room/Bathroom': 'rooms',
       'Room/Bedroom': 'rooms',
